--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-# プライバシーポリシー
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>プライバシーポリシー</title>
+  <style>
+    /* サンプルとして、少しだけスタイルを追加 */
+    body {
+      font-family: sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      color: #333;
+    }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    section {
+      margin-bottom: 1.5rem;
+    }
+    section h2 {
+      font-size: 1.2rem;
+      margin-top: 1.2rem;
+      margin-bottom: 0.6rem;
+    }
+    p {
+      margin: 0.5rem 0;
+    }
+    .last-updated {
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
-当サイト(以下、「本サイト」といいます)では、利用者の個人情報を収集することはありません。
-アクセス解析などにより匿名のアクセス情報を収集する場合がありますが、これらの情報は、
-サイトの利便性向上・利用状況の把握を目的とするものであり、個人を特定できるものではありません。
+  <h1>プライバシーポリシー</h1>
 
-本ポリシーは予告なく変更される場合があります。変更後のポリシーは、本サイト上に掲載した
-時点で効力を生じるものとします。
+  <section>
+    <p>
+      当サイト（以下「本サイト」といいます）では、利用者の個人情報を収集することはありません。  
+      ただし、ブラウザの種類やアクセス日時などのアクセス情報を収集する場合があります。  
+      これらの情報は、サイトの利便性向上や利用状況の把握にのみ利用し、利用者個人を特定する目的では使用いたしません。
+    </p>
+  </section>
 
-最終更新日: 2025-01-10
+  <section>
+    <h2>1. 個人情報の収集について</h2>
+    <p>
+      本サイトは、特定の個人を識別できる情報（氏名、住所、メールアドレスなど）を収集することはありません。
+    </p>
+  </section>
+
+  <section>
+    <h2>2. アクセス解析ツールについて</h2>
+    <p>
+      本サイトは、サイトの利用状況を把握するためにアクセス解析ツールを使用している場合があります。  
+      アクセス解析ツールは、クッキー（Cookie）を使用し、匿名のアクセス情報（IPアドレス、使用ブラウザ、閲覧ページなど）を収集することがあります。
+    </p>
+  </section>
+
+  <section>
+    <h2>3. 法令、規範の遵守と見直し</h2>
+    <p>
+      本サイトは、適用される法令やその他の規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。  
+      変更後のプライバシーポリシーについては、本サイト上に掲載した時点で効力を生じるものとします。
+    </p>
+  </section>
+
+  <p class="last-updated">最終更新日: 2025-01-10</p>
+
+</body>
+</html>
